// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page-layout Example (index) layout renders as expected 1`] = `
<div>
  <div
    className="shell-header-buffer"
  />
  <div
    className="sticky-outer-wrapper"
    style={Object {}}
  >
    <div
      className="sticky-inner-wrapper"
      style={
        Object {
          "position": "relative",
          "top": "0px",
          "zIndex": 4,
        }
      }
    >
      <div
        className="border-t border-b border--gray-light bg-white"
        data-swiftype-index="false"
      >
        <div
          className="limiter"
        >
          <div
            className="grid"
          >
            <div
              className="col col--4-mm col--12"
              style={
                Object {
                  "minHeight": 50,
                }
              }
            >
              <div
                className="ml24-mm pt12"
              >
                <div
                  className="flex-parent"
                >
                  <a
                    className="wmax240-ml wmax180-mm txt-fancy txt-l block txt-truncate color-blue-on-hover"
                    href="/dr-ui"
                  >
                    dr-ui
                  </a>
                </div>
              </div>
            </div>
            <div
              className="col col--5-mm col--12"
            >
              <div
                className="clearfix"
              >
                <div
                  className="fl"
                >
                  <a
                    className="inline-block px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block border-b border--transparent "
                    data-test="/PageLayout/"
                    href="/PageLayout/"
                  >
                    Overview
                  </a>
                </div>
                <div
                  className="fl"
                >
                  <a
                    className="inline-block px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block border-b border--transparent "
                    data-test="/PageLayout/specification/"
                    href="/PageLayout/specification/"
                  >
                    Specification
                  </a>
                </div>
                <div
                  className="fl"
                >
                  <a
                    className="inline-block px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block-mm none border--transparent "
                    data-test="/PageLayout/examples/"
                    href="/PageLayout/examples/"
                  >
                    Examples
                  </a>
                </div>
                <div
                  className="fl"
                >
                  <a
                    className="inline-block px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block-mm none border--transparent "
                    data-test="/PageLayout/demo/"
                    href="/PageLayout/demo/"
                  >
                    Demo
                  </a>
                </div>
                <div
                  className="fl"
                >
                  <div
                    className="inline-block"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                  >
                    <button
                      aria-label="More"
                      className="px6 py12 mr12 align-l cursor-pointer none-mm"
                      type="button"
                    >
                      More +
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="col col--3-mm col--12"
            >
              <div
                className="flex-parent-mm flex-parent--center-cross flex-parent--end-main h-full-mm wmax300 wmax-full-mm my0-mm my12"
              >
                <div
                  className="h36 relative"
                >
                  <div>
                    <div>
                      <button
                        className="flex-parent flex-parent--center-cross flex-parent--center-main btn btn--stroke "
                        onClick={[Function]}
                        style={Object {}}
                      >
                        <span
                          className="mr6"
                        >
                          <svg
                            className="icon w18 h18"
                          >
                            <use
                              xlinkHref="#icon-search"
                            />
                          </svg>
                        </span>
                         
                        Search
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="limiter"
  >
    <div
      className="grid"
    >
      <div
        className="col col--4-mm col--12 bg-gray-faint"
      >
        <div
          data-swiftype-index="false"
        >
          <div
            className="sticky-outer-wrapper"
            style={Object {}}
          >
            <div
              className="sticky-inner-wrapper"
              style={
                Object {
                  "position": "relative",
                  "top": "0px",
                  "zIndex": 3,
                }
              }
            >
              <div
                className="sidebarNarrowClasses"
                id="dr-ui--page-layout-sidebar"
              >
                <div
                  className="none block-mm py12"
                >
                  <div
                    className="mx24"
                    data-swiftype-index="false"
                  >
                    <a
                      className="block txt-bold color-gray py6 color-blue-on-hover"
                      href="/PageLayout/#cool"
                      id="undefined-sidebar"
                    >
                      Cool (3)
                    </a>
                    <a
                      className="block txt-bold color-gray py6 color-blue-on-hover"
                      href="/PageLayout/#awesome"
                      id="undefined-sidebar"
                    >
                      Awesome (1)
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="col col--12 col--8-mm"
      >
        <div
          className="mt24-mm pr0-mm mb60 px36-mm"
          id="docs-content"
        >
          <div
            className="prose"
          >
            <h1
              className="txt-fancy"
            >
              Examples
            </h1>
            
          </div>
          <div>
            <div>
              <div>
                <a
                  className="unprose mb18 block color-blue-on-hover"
                  href="/PageLayout/#cool"
                >
                  <h2
                    className="txt-bold"
                    id="cool"
                  >
                    Cool
                     
                    <span
                      data-swiftype-index="false"
                    >
                      (
                      3
                      )
                    </span>
                  </h2>
                </a>
                <div
                  className="grid grid--gut36"
                >
                  <div
                    className="mb18 col col--12 col--6-ml"
                  >
                    <a
                      className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
                      href="/PageLayout/example-1/"
                    >
                      <div
                        className="relative h120 mb6"
                      >
                        <div />
                      </div>
                      <div>
                        <div
                          className="mb6"
                        >
                          
                          <div
                            className="inline-block color-gray txt-s txt-bold"
                          >
                            <svg
                              className="events-none icon inline-block align-t"
                              focusable="false"
                              role="presentation"
                              style={
                                Object {
                                  "height": 18,
                                  "width": 18,
                                }
                              }
                            >
                              <use
                                xlinkHref="#icon-code"
                                xmlnsXlink="http://www.w3.org/1999/xlink"
                              />
                            </svg>
                             
                            JavaScript
                          </div>
                        </div>
                        <div
                          className="mb6"
                        >
                          Example 1
                        </div>
                        <div
                          className="color-gray color-gray-on-hover"
                        >
                          Replace me.
                        </div>
                      </div>
                    </a>
                  </div>
                  <div
                    className="mb18 col col--12 col--6-ml"
                  >
                    <a
                      className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
                      href="/PageLayout/example-2/"
                    >
                      <div
                        className="relative h120 mb6"
                      >
                        <div />
                      </div>
                      <div>
                        <div
                          className="mb6"
                        >
                          
                          <div
                            className="inline-block color-gray txt-s txt-bold"
                          >
                            <svg
                              className="events-none icon inline-block align-t"
                              focusable="false"
                              role="presentation"
                              style={
                                Object {
                                  "height": 18,
                                  "width": 18,
                                }
                              }
                            >
                              <use
                                xlinkHref="#icon-code"
                                xmlnsXlink="http://www.w3.org/1999/xlink"
                              />
                            </svg>
                             
                            JavaScript
                          </div>
                        </div>
                        <div
                          className="mb6"
                        >
                          Example 2
                        </div>
                        <div
                          className="color-gray color-gray-on-hover"
                        >
                          Replace me.
                        </div>
                      </div>
                    </a>
                  </div>
                  <div
                    className="mb18 col col--12 col--6-ml"
                  >
                    <a
                      className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
                      href="/PageLayout/example-3/"
                    >
                      <div
                        className="relative h120 mb6"
                      >
                        <div />
                      </div>
                      <div>
                        <div
                          className="mb6"
                        >
                          
                          <div
                            className="inline-block color-gray txt-s txt-bold"
                          >
                            <svg
                              className="events-none icon inline-block align-t"
                              focusable="false"
                              role="presentation"
                              style={
                                Object {
                                  "height": 18,
                                  "width": 18,
                                }
                              }
                            >
                              <use
                                xlinkHref="#icon-code"
                                xmlnsXlink="http://www.w3.org/1999/xlink"
                              />
                            </svg>
                             
                            JavaScript
                          </div>
                        </div>
                        <div
                          className="mb6"
                        >
                          Example 3
                        </div>
                        <div
                          className="color-gray color-gray-on-hover"
                        >
                          Replace me.
                        </div>
                      </div>
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div>
                <a
                  className="unprose mb18 block color-blue-on-hover"
                  href="/PageLayout/#awesome"
                >
                  <h2
                    className="txt-bold"
                    id="awesome"
                  >
                    Awesome
                     
                    <span
                      data-swiftype-index="false"
                    >
                      (
                      1
                      )
                    </span>
                  </h2>
                </a>
                <div
                  className="grid grid--gut36"
                >
                  <div
                    className="mb18 col col--12 col--6-ml"
                  >
                    <a
                      className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
                      href="/PageLayout/example-3/"
                    >
                      <div
                        className="relative h120 mb6"
                      >
                        <div />
                      </div>
                      <div>
                        <div
                          className="mb6"
                        >
                          
                          <div
                            className="inline-block color-gray txt-s txt-bold"
                          >
                            <svg
                              className="events-none icon inline-block align-t"
                              focusable="false"
                              role="presentation"
                              style={
                                Object {
                                  "height": 18,
                                  "width": 18,
                                }
                              }
                            >
                              <use
                                xlinkHref="#icon-code"
                                xmlnsXlink="http://www.w3.org/1999/xlink"
                              />
                            </svg>
                             
                            JavaScript
                          </div>
                        </div>
                        <div
                          className="mb6"
                        >
                          Example 3
                        </div>
                        <div
                          className="color-gray color-gray-on-hover"
                        >
                          Replace me.
                        </div>
                      </div>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`page-layout Page layout renders as expected 1`] = `
<div>
  <div
    className="shell-header-buffer"
  />
  <div
    className="sticky-outer-wrapper"
    style={Object {}}
  >
    <div
      className="sticky-inner-wrapper"
      style={
        Object {
          "position": "relative",
          "top": "0px",
          "zIndex": 4,
        }
      }
    >
      <div
        className="border-t border-b border--gray-light bg-white"
        data-swiftype-index="false"
      >
        <div
          className="limiter"
        >
          <div
            className="grid"
          >
            <div
              className="col col--4-mm col--12"
              style={
                Object {
                  "minHeight": 50,
                }
              }
            >
              <div
                className="ml24-mm pt12"
              >
                <div
                  className="flex-parent"
                >
                  <a
                    className="wmax240-ml wmax180-mm txt-fancy txt-l block txt-truncate color-blue-on-hover"
                    href="/dr-ui"
                  >
                    dr-ui
                  </a>
                </div>
              </div>
            </div>
            <div
              className="col col--5-mm col--12"
            >
              <div
                className="clearfix"
              >
                <div
                  className="fl"
                >
                  <a
                    className="inline-block px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block border-b border--transparent "
                    data-test="/PageLayout/"
                    href="/PageLayout/"
                  >
                    Overview
                  </a>
                </div>
                <div
                  className="fl"
                >
                  <a
                    className="inline-block px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block border-b border--transparent "
                    data-test="/PageLayout/specification/"
                    href="/PageLayout/specification/"
                  >
                    Specification
                  </a>
                </div>
                <div
                  className="fl"
                >
                  <a
                    className="inline-block px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block-mm none border--transparent "
                    data-test="/PageLayout/examples/"
                    href="/PageLayout/examples/"
                  >
                    Examples
                  </a>
                </div>
                <div
                  className="fl"
                >
                  <a
                    className="inline-block px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block-mm none border--transparent "
                    data-test="/PageLayout/demo/"
                    href="/PageLayout/demo/"
                  >
                    Demo
                  </a>
                </div>
                <div
                  className="fl"
                >
                  <div
                    className="inline-block"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                  >
                    <button
                      aria-label="More"
                      className="px6 py12 mr12 align-l cursor-pointer none-mm"
                      type="button"
                    >
                      More +
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="col col--3-mm col--12"
            >
              <div
                className="flex-parent-mm flex-parent--center-cross flex-parent--end-main h-full-mm wmax300 wmax-full-mm my0-mm my12"
              >
                <div
                  className="h36 relative"
                >
                  <div>
                    <div>
                      <button
                        className="flex-parent flex-parent--center-cross flex-parent--center-main btn btn--stroke "
                        onClick={[Function]}
                        style={Object {}}
                      >
                        <span
                          className="mr6"
                        >
                          <svg
                            className="icon w18 h18"
                          >
                            <use
                              xlinkHref="#icon-search"
                            />
                          </svg>
                        </span>
                         
                        Search
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="limiter"
  >
    <div
      className="grid"
    >
      <div
        className="col col--4-mm col--12 bg-gray-faint"
      >
        <div
          data-swiftype-index="false"
        >
          <div
            className="sticky-outer-wrapper"
            style={Object {}}
          >
            <div
              className="sticky-inner-wrapper"
              style={
                Object {
                  "position": "relative",
                  "top": "0px",
                  "zIndex": 3,
                }
              }
            >
              <div
                className="sidebarNarrowClasses"
                id="dr-ui--page-layout-sidebar"
              >
                <div
                  className="mx24 py12"
                >
                  <ul
                    className=""
                    style={Object {}}
                  >
                    <li
                      className="pb6 mb6"
                    >
                      <a
                        className="color-blue-on-hover"
                        href="#section-1"
                      >
                        Section 1
                      </a>
                    </li>
                    <li
                      className="pb6"
                    >
                      <a
                        className="color-blue-on-hover"
                        href="#section-2"
                      >
                        Section 2
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="col col--12 col--8-mm"
      >
        <div
          className="mt24-mm pr0-mm mb60 px36-mm"
          id="docs-content"
        >
          <div
            className="prose"
          >
            <h1
              className="txt-fancy"
            >
              Overview
            </h1>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <h2
              id="section-1"
            >
              Section 1
            </h2>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <h2
              id="section-2"
            >
              Section 2
            </h2>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <div
              className="mt36"
            >
              <div
                className="bg-gray-faint py12 px18 round color-gray"
              >
                <div>
                  <div>
                    <div
                      className="mb6"
                    >
                      Was this 
                      
                       helpful?
                    </div>
                    <button
                      className="btn btn--s"
                      id="dr-ui--feedback-page-yes"
                      onClick={[Function]}
                    >
                      Yes
                    </button>
                    <button
                      className="btn btn--s ml6"
                      id="dr-ui--feedback-page-no"
                      onClick={[Function]}
                    >
                      No
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
</div>
`;
